[gd_scene load_steps=2 format=2]

[ext_resource path="res://interface/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="introducir_nombre" type="LineEdit" parent="."]
margin_left = 350.333
margin_top = 304.115
margin_right = 720.333
margin_bottom = 328.115

[node name="unirse" type="Button" parent="."]
margin_left = 153.596
margin_top = 453.918
margin_right = 412.596
margin_bottom = 499.918
text = "unirse"

[node name="crear" type="Button" parent="."]
margin_left = 662.995
margin_top = 449.601
margin_right = 921.995
margin_bottom = 495.601
text = "crear"

[node name="info" type="Label" parent="."]
margin_left = 15.0
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 215.0
[connection signal="text_changed" from="introducir_nombre" to="." method="_on_introducir_nombre_text_changed"]
[connection signal="pressed" from="unirse" to="." method="_on_unirse_pressed"]
[connection signal="pressed" from="crear" to="." method="_on_crear_pressed"]
